# shrtnr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TESTS.md  TRADEMARK_POLICY.md  agents.md  package.json  vitest.config.mts  wrangler.jsonc  wrangler.toml
.claude/: settings.json
.github/workflows/: ci.yml  migrate.yml  release-extension.yml  release-npm.yml  release-packages.yml  release-pub.yml  release-sdk-npm.yml  release-sdk-pub.yml  release-sdk-python.yml  release-sdk.yml  release.yml  sdk-e2e.yml  tag-pub.yml
browser-extensions/: .gitignore  LICENSE  NOTICE  build.mjs  package.json  tsconfig.json  vitest.config.ts
browser-extensions/scripts/: generate-icons.mjs  verify-build.mjs
browser-extensions/src/: background.ts
browser-extensions/src/components/: ConfigForm.tsx  DeployCta.tsx
browser-extensions/src/options/: Options.tsx  index.tsx  options.css  options.html
browser-extensions/src/popup/: Popup.tsx  index.tsx  popup.css  popup.html
browser-extensions/src/styles/: cta.css  forms.css  tokens.css
browser-extensions/src/types/: css.d.ts
browser-extensions/tests/: options.test.tsx  popup.test.tsx  setup.ts
docs/: release-automation.md
mcp/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: client.ts  index.ts  server.ts
mcp/src/__tests__/: client.test.ts
migrations/: 0001_initial.sql  0002_rename_is_vanity.sql  0002_user_preferences.sql  0003_drop_cached_counters.sql  0004_slug_text_pk.sql  0005_bundles.sql  0005_link_created_via.sql  0006_click_channel.sql  0007_redirect_settings.sql  0008_pages.sql  0008_slug_primary_and_disable.sql  0009_split_click_counts.sql
public/: manifest.webmanifest
scripts/: backfill-app-referrers.ts  bump-sdk-version.sh  deploy.sh  emit-spec.ts  read-version.sh  resolve-d1-id.js  test-sdks-e2e.sh
sdk/: CHANGELOG.md  README.md  package.json
sdk/dart/: CHANGELOG.md  NOTICE  README.md  pubspec.yaml
sdk/dart/example/: README.md  shrtnr_example.dart
sdk/dart/lib/: shrtnr.dart
sdk/dart/lib/src/: client.dart  models.dart
sdk/dart/test/: client_test.dart  e2e_test.dart  exports_test.dart
sdk/python/: .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
sdk/python/src/shrtnr/: __init__.py  _base.py  _base_client.py  async_client.py  client.py  errors.py  models.py
sdk/python/src/shrtnr/resources/: __init__.py  bundles.py  links.py  slugs.py
sdk/python/tests/: conftest.py  test_async_client.py  test_client.py  test_e2e.py  test_exports.py
sdk/src/: base-client.ts  errors.ts  index.ts  public-client.ts  types.ts
sdk/src/__tests__/: client.test.ts  package-surface.test.ts
sdk/typescript/: CHANGELOG.md  NOTICE  README.md  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
sdk/typescript/src/: base-client.ts  index.ts  models.ts  public-client.ts  types.ts
src/: 404.ts  access.ts  assets.ts  auth.ts  client.ts  client.ts.backup  constants.ts  db.ts  escape.ts  index.ts  index.tsx  migrate.ts  normalize-url.ts  qr.ts  redirect-rules.ts  redirect.ts  slugs.ts  styles.ts  types.ts  ua.ts
src/__tests__/: 404.test.ts  access.test.ts  admin-service.test.ts  api-key-repository.test.ts  api-schemas.test.ts  api.test.ts  assets.test.ts  auth.test.ts  bundle-detail-page.test.ts  bundles-api.test.ts  click-filters.test.ts  click-repository.test.ts  integration.test.ts  landing-page.test.ts  link-detail-page.test.ts  link-repository.test.ts  link-service.test.ts  links-page.test.ts  mcp-analytics-tools.test.ts  mcp.test.ts  migrate.test.ts  normalize-url.test.ts  oauth-callback.test.ts  openapi.test.ts  ownership.test.ts  public-api-range.test.ts  redirect-kv.test.ts  sdk-ts-integration.test.ts  setting-repository.test.ts  settings-page.test.ts  setup.ts  slug-cache.test.ts  slug-repository.test.ts  slugs.test.ts  tracking.test.ts  trends.test.ts  ua.test.ts
src/__tests__/handler/: api-links.test.ts  api-misc.test.ts  api.test.ts  bundles-api.test.ts  mcp-analytics-tools.test.ts  mcp.test.ts  openapi.test.ts  public-api-range.test.ts  redirect-kv.test.ts  sdk-ts-integration.test.ts
src/__tests__/integration/: bundle-aggregation.test.ts  expiration-flow.test.ts  integration.test.ts  mcp-create-and-redirect.test.ts
src/__tests__/page/: 404.test.ts  bundle-detail-page.test.ts  bundles-page.test.ts  landing-page.test.ts  link-detail-page.test.ts  links-page.test.ts  mcp-page.test.ts  settings-page.test.ts
src/__tests__/repository/: api-key-repository.test.ts  bundle-repository.test.ts  click-repository-bundles.test.ts  click-repository.test.ts  link-repository.test.ts  setting-repository.test.ts  slug-repository.test.ts
src/__tests__/service/: admin-service.test.ts  bundle-management.test.ts  bundle-service.test.ts  link-service.test.ts  ownership.test.ts  tracking.test.ts
src/__tests__/unit/: access.test.ts  analytics-fill.test.ts  api-schemas.test.ts  auth.test.ts  click-filters.test.ts  country.test.ts  fingerprint.test.ts  format.test.ts  i18n.test.ts  mcp-range-wrapper.test.ts  mcp-range.test.ts  normalize-url.test.ts  redirect-rules.test.ts  slug-cache.test.ts  slugs.test.ts  title-fetch.test.ts  trends.test.ts  ua.test.ts
src/admin/: ui.ts
src/api/: analytics.ts  bundles.ts  health.ts  keys.ts  links.ts  pages.ts  preferences.ts  qr.ts  redirects.ts  response.ts  router.ts  schemas.ts  scope.ts  settings.ts  slugs.ts  sub-app.ts
src/components/: delta.tsx  kpi-card.tsx  range-picker.tsx  section-label.tsx  sparkline.tsx
src/db/: api-key-repository.ts  bundle-repository.ts  click-repository.ts  index.ts  link-repository.ts  page-repository.ts  setting-repository.ts  slug-repository.ts
src/i18n/: en.ts  id.ts  sv.ts
src/kv/: index.ts  slug-cache.ts
src/mcp/: access-handler.ts  page.ts  server.ts  workers-oauth-utils.ts
src/pages/: bundle-detail.tsx  bundles.tsx  dashboard.tsx  keys.tsx  landing.ts  layout.tsx  link-detail.tsx  links.tsx  pages.tsx  redirects.tsx  settings.tsx
src/services/: admin-management.ts  bundle-management.ts  index.ts  link-management.ts  result.ts  trends.ts
(+8 files in other folders)
